# emerald-engine

./: .devcontainer.json  .dockerignore  .env.example  .gitignore  .opencode.md  AGENTS.md  Dockerfile  Dockerfile.research  Dockerfile.sentinel  README.md  System_Health_Report.txt  agent_chat_interpreter.py  agent_code_evaluator.py  agent_code_synthesizer.py  agent_dashboard_compiler.py  agent_devsecops.py  agent_git_lifecycle.py  agent_harvester.py  agent_hf_sync.py  agent_identity_manager.py  agent_meta_prompt_engine.py  agent_qa.py  agent_runner_grid.py  agent_software_architect.py  agent_state_relay.py  agent_trend_scouter.py  api_key  app.py  autonomous_hunter.py  backend_performance.go  binance_trading_core.py  cloud_manager.py  crypto_vault.py  deploy.sh  docker-compose.yml  ecosystem.config.cjs  engine_scanner.go  go.mod  hacker_bot.py  infinite_research_stream.py  (+21 more)
.aegis/: .keyring
.opencode/: opencode.json
.secrets/: vault.enc  vault.sha256
api/: entry.js
compose_fragments/: docker-compose.core_infrastructure.yml
config/: master_prompt.txt
integrations/: cc_switch_adapter.rs  dify_adapter.py  n8n_adapter.py  python_adapter.py  system_design_primer_adapter.py
my-aladdin-system/: .env.example  Dockerfile  README.md  evolutionary_memory.json  human_mimicry.py  main.py  micro_earning.py  notifications.json  requirements.txt  supervisord.conf
public/: about.html  compare.html  contact.html  disclosure.html  index.html  privacy.html  products.html  resources.html  review.html  robots.txt  (+2 more)
systems_agent/: Cargo.toml
systems_agent/src/: main.rs
(+235 files in other folders)
