[package]
name = "systems_agent"
version = "0.1.0"
edition = "2021"
description = "Emerald Engine Low-Level Systems Agent — memory-safe crypto, sub-millisecond execution paths"

[dependencies]
aes-gcm = "0.10"
hmac = "0.12"
sha2 = "0.10"
pbkdf2 = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
zeroize = { version = "1", features = ["zeroize_derive"] }
ctr = "0.9"
aes = "0.8"
hex = "0.4.3"
